--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <label for="select">What campus are you located on?</label>
             <select name="college" id="college">
                 <option value="-1">Please Select</option>
-                <option value="-1">Davis</option>
-                <option value="-1">Trafalgar</option>
-                <option value="-1">HMC</option>
-                <option value="-1">STC</option>
+                <option value="-1">Ontario</option>
+                <option value="-1">Ottawa</option>
+                <option value="-1">NovaScotia</option>
+                <option value="-1">Qubec</option>
             </select>
             <br>
             <br>
